data/all_generated_tests/raw_wast_tests/br_table_InfiniteLoops_2198.wast
;; 8. **Test 8: Incorrect Index Encodings in `br_table`**    - Description: Use `br_table` with incorrectly encoded indices for labels, observing how both engines handle the error.    - Specific Constraint: Tests for proper encoding checks and out-of-bounds handling.    - Infinite Loop Relation: Misencoded factors leading to incorrect branching may cause loops to not exit.

(assert_invalid
  (module 
    (func 
      (block 
        (i32.const 0)
        (i32.const 1)
        (br_table 0 0xFFFFFFFF (i32.const 2))
      )
    )
  )
  "unexpected end of section or function"
)